opam-version: "2.0"
version: "0.2"
synopsis: "Automated checks and management for opam repositories on Github"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
authors: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
homepage: "https://github.com/AltGr/Camelus"
bug-reports: "https://github.com/AltGr/Camelus/issues"
dev-repo: "git+https://github.com/AltGr/Camelus.git"
depends: [
  "cohttp-lwt-unix" { < "2.0.0" }
  "dune"
  "git-unix" {>= "1.13" & < "2.0" | = "1.11.5" }
  "github"
  "github-unix"
  "opam-format" {>= "2.0.0~beta5"}
  "opam-solver" {>= "2.0.0~beta5"}
  "opam-state" { >= "2.0.1"}
  "tls"
  "yojson"
  ("ago" | ("utop"))
  ("fpath" | "abella")
  "lwt_ppx" { build }
  "fpath"
]
build: ["dune" "build" "-p" name]
pin-depends: [
  ["github.3.1.0" "git+https://github.com/AltGr/ocaml-github#21efde3"]
  ["github-unix.3.1.0" "git+https://github.com/AltGr/ocaml-github#21efde3"]
]
